--- a/GitCourseraCourse.ipynb
+++ b/GitCourseraCourse.ipynb
@@ -34,6 +34,21 @@
     "* [Git installation instructions for each platform](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Week 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Week 3"
+   ]
   }
  ],
  "metadata": {
